// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferTravelFundsConfirmationPage should not show PageFooterWcmSourced when in a webview 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      />
    </div>
    <div />
  </div>
  <div
    class="trip-booked custom-container bgpdkblue white"
  >
    <div
      class="trip-booked--content"
    >
      <div
        class="swa-message p0 small success"
      >
        <span
          class="icon-container"
        >
          <i
            class="icon icon_check"
          />
        </span>
        <span
          class="message--text"
        >
          <h3
            class="xxlarge bold white inline-block"
          >
            This is the header
          </h3>
        </span>
      </div>
      <div
        class="mt4"
      >
        <p
          class="larger white"
        />
        <p
          class="medium white mt2"
        >
          This is the body
        </p>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-summary-card"
  >
    <div
      class="transfer-funds-summary--title"
    >
      TRANSFER_CONFIRMATION_TITLE
    </div>
    <div
      class="transfer-funds-summary"
    >
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--card-and-vert-line-row"
        >
          <div
            class="travel-fund--image_rtf-not-leisure credit-card--image left mr2"
          />
          <div
            class="transfer-funds-summary--vert-line-after-card"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-sender-name"
          >
            Thomas Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-pnr"
          >
            1010AA
          </div>
          <div
            class="transfer-funds-summary--detail-col-expiration"
          >
            EXPIRATION_TEXT: 10/20/2030
          </div>
        </div>
        <div
          class="transfer-funds-summary--bold-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              100.00
            </span>
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--vert-line-col"
        >
          <div
            class="transfer-funds-summary--circle"
          />
          <div
            class="transfer-funds-summary--to-text"
          >
            TRANSFERRED_TO_LABEL
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="receiver"
        >
          <div
            class="travel-fund--confirmation-image_rtf credit-card--image left mr2"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-receiver-name"
          >
            Arthur Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-rr-number"
          >
            RAPID_REWARDS_LABEL601940404
          </div>
          <div
            class="transfer-funds-summary--detail-col-email"
          >
            RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER: a@s.com
          </div>
          <br />
          <div
            class="transfer-funds-summary--detail-col-personal-message"
          >
            <div>
              CONFIRMATION_PERSONAL_MESSAGE_LABEL
            </div>
            <div>
              <p
                class="transfer-funds-summary--detail-col-personal-message-paragraph"
              >
                Hey Art, here are those travel funds I promised you. reallyreallyreallyreallyreallyreallyreallyreallylongword  - Tom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-total"
  >
    <div
      class="transfer-funds-total--amount"
    >
      <div
        class="price-line"
      >
        <span
          class="price-line--title"
        >
          TOTAL_TRANSFERRED_LABEL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                100.00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-travel-funds-footer"
  />
</div>
`;

exports[`TransferTravelFundsConfirmationPage should render a partial success header when transfer is incomplete 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__DONE
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="info-banner "
  >
    <div
      class="info-banner--alert"
    >
      <i
        class="icon icon_exclamation-circle warning"
      />
    </div>
    <div
      class="info-banner-container"
    >
      <b
        class="info-banner-container--header"
      >
        Transfer Confirmed
      </b>
      <p
        class="info-banner-container--body"
      >
        The transfer has been completed, however there may be a problem with the email confirmation. The flight credit is now associated with &lt;name&gt;'s Rapid Rewards account.
      </p>
      <div
        class="info-banner-container--link"
      />
    </div>
  </div>
  <div
    class="transfer-funds-summary-card"
  >
    <div
      class="transfer-funds-summary--title"
    >
      TRANSFER_CONFIRMATION_TITLE
    </div>
    <div
      class="transfer-funds-summary"
    >
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--card-and-vert-line-row"
        >
          <div
            class="travel-fund--image_rtf-not-leisure credit-card--image left mr2"
          />
          <div
            class="transfer-funds-summary--vert-line-after-card"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-sender-name"
          >
            Thomas Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-pnr"
          >
            1010AA
          </div>
          <div
            class="transfer-funds-summary--detail-col-expiration"
          >
            EXPIRATION_TEXT: 10/20/2030
          </div>
        </div>
        <div
          class="transfer-funds-summary--bold-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              100.00
            </span>
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--vert-line-col"
        >
          <div
            class="transfer-funds-summary--circle"
          />
          <div
            class="transfer-funds-summary--to-text"
          >
            TRANSFERRED_TO_LABEL
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="receiver"
        >
          <div
            class="travel-fund--confirmation-image_rtf credit-card--image left mr2"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-receiver-name"
          >
            Arthur Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-rr-number"
          >
            RAPID_REWARDS_LABEL601940404
          </div>
          <div
            class="transfer-funds-summary--detail-col-email"
          >
            RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER: a@s.com
          </div>
          <br />
          <div
            class="transfer-funds-summary--detail-col-personal-message"
          >
            <div>
              CONFIRMATION_PERSONAL_MESSAGE_LABEL
            </div>
            <div>
              <p
                class="transfer-funds-summary--detail-col-personal-message-paragraph"
              >
                Hey Art, here are those travel funds I promised you. reallyreallyreallyreallyreallyreallyreallyreallylongword  - Tom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-total"
  >
    <div
      class="transfer-funds-total--amount"
    >
      <div
        class="price-line"
      >
        <span
          class="price-line--title"
        >
          TOTAL_TRANSFERRED_LABEL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                100.00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-travel-funds-footer"
  >
    <div
      class="page-footer-wcm"
    >
      <span
        class="page-footer-wcm--copyright"
      >
        ©
        2024
         
        SHARED__FOOTER__ALL_RIGHTS_RESERVED
      </span>
    </div>
  </div>
</div>
`;

exports[`TransferTravelFundsConfirmationPage should render the page 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__DONE
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="trip-booked custom-container bgpdkblue white"
  >
    <div
      class="trip-booked--content"
    >
      <div
        class="swa-message p0 small success"
      >
        <span
          class="icon-container"
        >
          <i
            class="icon icon_check"
          />
        </span>
        <span
          class="message--text"
        >
          <h3
            class="xxlarge bold white inline-block"
          >
            This is the header
          </h3>
        </span>
      </div>
      <div
        class="mt4"
      >
        <p
          class="larger white"
        />
        <p
          class="medium white mt2"
        >
          This is the body
        </p>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-summary-card"
  >
    <div
      class="transfer-funds-summary--title"
    >
      TRANSFER_CONFIRMATION_TITLE
    </div>
    <div
      class="transfer-funds-summary"
    >
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--card-and-vert-line-row"
        >
          <div
            class="travel-fund--image_rtf-not-leisure credit-card--image left mr2"
          />
          <div
            class="transfer-funds-summary--vert-line-after-card"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-sender-name"
          >
            Thomas Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-pnr"
          >
            1010AA
          </div>
          <div
            class="transfer-funds-summary--detail-col-expiration"
          >
            EXPIRATION_TEXT: 10/20/2030
          </div>
        </div>
        <div
          class="transfer-funds-summary--bold-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              100.00
            </span>
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--vert-line-col"
        >
          <div
            class="transfer-funds-summary--circle"
          />
          <div
            class="transfer-funds-summary--to-text"
          >
            TRANSFERRED_TO_LABEL
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="receiver"
        >
          <div
            class="travel-fund--confirmation-image_rtf credit-card--image left mr2"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-receiver-name"
          >
            Arthur Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-rr-number"
          >
            RAPID_REWARDS_LABEL601940404
          </div>
          <div
            class="transfer-funds-summary--detail-col-email"
          >
            RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER: a@s.com
          </div>
          <br />
          <div
            class="transfer-funds-summary--detail-col-personal-message"
          >
            <div>
              CONFIRMATION_PERSONAL_MESSAGE_LABEL
            </div>
            <div>
              <p
                class="transfer-funds-summary--detail-col-personal-message-paragraph"
              >
                Hey Art, here are those travel funds I promised you. reallyreallyreallyreallyreallyreallyreallyreallylongword  - Tom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-total"
  >
    <div
      class="transfer-funds-total--amount"
    >
      <div
        class="price-line"
      >
        <span
          class="price-line--title"
        >
          TOTAL_TRANSFERRED_LABEL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                100.00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-travel-funds-footer"
  >
    <div
      class="page-footer-wcm"
    >
      <span
        class="page-footer-wcm--copyright"
      >
        ©
        2024
         
        SHARED__FOOTER__ALL_RIGHTS_RESERVED
      </span>
    </div>
  </div>
</div>
`;

exports[`TransferTravelFundsConfirmationPage should render the page as a webview 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      />
    </div>
    <div />
  </div>
  <div
    class="trip-booked custom-container bgpdkblue white"
  >
    <div
      class="trip-booked--content"
    >
      <div
        class="swa-message p0 small success"
      >
        <span
          class="icon-container"
        >
          <i
            class="icon icon_check"
          />
        </span>
        <span
          class="message--text"
        >
          <h3
            class="xxlarge bold white inline-block"
          >
            This is the header
          </h3>
        </span>
      </div>
      <div
        class="mt4"
      >
        <p
          class="larger white"
        />
        <p
          class="medium white mt2"
        >
          This is the body
        </p>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-summary-card"
  >
    <div
      class="transfer-funds-summary--title"
    >
      TRANSFER_CONFIRMATION_TITLE
    </div>
    <div
      class="transfer-funds-summary"
    >
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--card-and-vert-line-row"
        >
          <div
            class="travel-fund--image_rtf-not-leisure credit-card--image left mr2"
          />
          <div
            class="transfer-funds-summary--vert-line-after-card"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-sender-name"
          >
            Thomas Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-pnr"
          >
            1010AA
          </div>
          <div
            class="transfer-funds-summary--detail-col-expiration"
          >
            EXPIRATION_TEXT: 10/20/2030
          </div>
        </div>
        <div
          class="transfer-funds-summary--bold-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              100.00
            </span>
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--vert-line-col"
        >
          <div
            class="transfer-funds-summary--circle"
          />
          <div
            class="transfer-funds-summary--to-text"
          >
            TRANSFERRED_TO_LABEL
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="receiver"
        >
          <div
            class="travel-fund--confirmation-image_rtf credit-card--image left mr2"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-receiver-name"
          >
            Arthur Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-rr-number"
          >
            RAPID_REWARDS_LABEL601940404
          </div>
          <div
            class="transfer-funds-summary--detail-col-email"
          >
            RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER: a@s.com
          </div>
          <br />
          <div
            class="transfer-funds-summary--detail-col-personal-message"
          >
            <div>
              CONFIRMATION_PERSONAL_MESSAGE_LABEL
            </div>
            <div>
              <p
                class="transfer-funds-summary--detail-col-personal-message-paragraph"
              >
                Hey Art, here are those travel funds I promised you. reallyreallyreallyreallyreallyreallyreallyreallylongword  - Tom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-total"
  >
    <div
      class="transfer-funds-total--amount"
    >
      <div
        class="price-line"
      >
        <span
          class="price-line--title"
        >
          TOTAL_TRANSFERRED_LABEL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                100.00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-travel-funds-footer"
  />
</div>
`;

exports[`TransferTravelFundsConfirmationPage should show PageFooterWcmSourced by default 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__DONE
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="trip-booked custom-container bgpdkblue white"
  >
    <div
      class="trip-booked--content"
    >
      <div
        class="swa-message p0 small success"
      >
        <span
          class="icon-container"
        >
          <i
            class="icon icon_check"
          />
        </span>
        <span
          class="message--text"
        >
          <h3
            class="xxlarge bold white inline-block"
          >
            This is the header
          </h3>
        </span>
      </div>
      <div
        class="mt4"
      >
        <p
          class="larger white"
        />
        <p
          class="medium white mt2"
        >
          This is the body
        </p>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-summary-card"
  >
    <div
      class="transfer-funds-summary--title"
    >
      TRANSFER_CONFIRMATION_TITLE
    </div>
    <div
      class="transfer-funds-summary"
    >
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--card-and-vert-line-row"
        >
          <div
            class="travel-fund--image_rtf-not-leisure credit-card--image left mr2"
          />
          <div
            class="transfer-funds-summary--vert-line-after-card"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-sender-name"
          >
            Thomas Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-pnr"
          >
            1010AA
          </div>
          <div
            class="transfer-funds-summary--detail-col-expiration"
          >
            EXPIRATION_TEXT: 10/20/2030
          </div>
        </div>
        <div
          class="transfer-funds-summary--bold-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              100.00
            </span>
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="transfer-funds-summary--vert-line-col"
        >
          <div
            class="transfer-funds-summary--circle"
          />
          <div
            class="transfer-funds-summary--to-text"
          >
            TRANSFERRED_TO_LABEL
          </div>
        </div>
      </div>
      <div
        class="transfer-funds-summary--row"
      >
        <div
          class="receiver"
        >
          <div
            class="travel-fund--confirmation-image_rtf credit-card--image left mr2"
          />
        </div>
        <div
          class="transfer-funds-summary--detail-col"
        >
          <div
            class="transfer-funds-summary--detail-col-receiver-name"
          >
            Arthur Shelby
          </div>
          <div
            class="transfer-funds-summary--detail-col-rr-number"
          >
            RAPID_REWARDS_LABEL601940404
          </div>
          <div
            class="transfer-funds-summary--detail-col-email"
          >
            RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER: a@s.com
          </div>
          <br />
          <div
            class="transfer-funds-summary--detail-col-personal-message"
          >
            <div>
              CONFIRMATION_PERSONAL_MESSAGE_LABEL
            </div>
            <div>
              <p
                class="transfer-funds-summary--detail-col-personal-message-paragraph"
              >
                Hey Art, here are those travel funds I promised you. reallyreallyreallyreallyreallyreallyreallyreallylongword  - Tom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-funds-total"
  >
    <div
      class="transfer-funds-total--amount"
    >
      <div
        class="price-line"
      >
        <span
          class="price-line--title"
        >
          TOTAL_TRANSFERRED_LABEL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                100.00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="transfer-travel-funds-footer"
  >
    <div
      class="page-footer-wcm"
    >
      <div
        class="page-footer-wcm--row"
      >
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/mock-url"
            id="view_full_site"
            target="_blank"
          >
            View full site
          </a>
          <span
            class="page-footer-wcm--divider"
          >
            |
          </span>
        </div>
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/contact-us"
            id="contact_us"
            target="_self"
          >
            Contact us
          </a>
          <span
            class="page-footer-wcm--divider"
          >
            |
          </span>
        </div>
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/mock-url"
            id="help_center"
            target="_blank"
          >
            Help Center
          </a>
        </div>
      </div>
      <div
        class="page-footer-wcm--row"
      >
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/terms-and-conditions?clk=GNAVTC"
            id="terms_conditions"
            target="_blank"
          >
            Terms & Conditions
          </a>
          <span
            class="page-footer-wcm--divider"
          >
            |
          </span>
        </div>
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/privacy-policy?clk=GNAVPRIVACY"
            id="privacy_policy"
            target="_blank"
          >
            Privacy Policy
          </a>
        </div>
      </div>
      <div
        class="page-footer-wcm--row"
      >
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/mock-url"
            id="do_not_sell_my_info"
            target="_blank"
          >
            Do Not Sell My Info
          </a>
        </div>
      </div>
      <span
        class="page-footer-wcm--copyright"
      >
        ©
        2024
         
        SHARED__FOOTER__ALL_RIGHTS_RESERVED
      </span>
    </div>
  </div>
</div>
`;
